# devforge-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-audit.yml
_cowork_ops/: state.json
src/devforge/: __init__.py  cli.py
src/revenueholdings/: __init__.py  cli.py
src/revenueholdings.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py
