[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devforge"
version = "0.3.0"
description = "Unified CLI for 10 developer tools: API contracts, SQL generation, infra diffs, config drift, API mocking, key management, env syncing, schema conversion, MCP servers, and dead code removal"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "DevForge"}]
keywords = ["devforge", "cli", "devops", "developer-tools", "api-contract", "openapi", "json-to-sql", "infrastructure", "terraform", "cloudformation", "config-drift", "devsecops", "mocking", "api-keys", "env", "schema", "mcp", "dead-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

# Optional groups — install with: pip install devforge[all]
[project.optional-dependencies]
guard = ["api-contract-guardian>=0.1.0"]
sql = ["json2sql>=0.1.0"]
deploy = ["deploydiff>=0.1.0"]
drift = ["configdrift>=0.1.0"]
ghost = ["apighost>=0.1.0"]
auth = ["apiauth>=0.2.0"]
envault = ["envault>=0.1.0"]
schema = ["schemaforge>=1.7.0"]
mcp = ["click-to-mcp>=0.4.0"]
deadcode = ["deadcode>=0.1.1"]
all = [
    "api-contract-guardian>=0.1.0",
    "json2sql>=0.1.0",
    "deploydiff>=0.1.0",
    "configdrift>=0.1.0",
    "apighost>=0.1.0",
    "apiauth>=0.2.0",
    "envault>=0.1.0",
    "schemaforge>=1.7.0",
    "click-to-mcp>=0.4.0",
    "deadcode>=0.1.1",
]
dev = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/Coding-Dev-Tools/devforge"
Repository = "https://github.com/Coding-Dev-Tools/devforge"
"Issue Tracker" = "https://github.com/Coding-Dev-Tools/devforge/issues"

[project.scripts]
devforge = "devforge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["*"]
